--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @keyframes shake {
     0%, 100% {
-      transform: translateX(0);
+      transform: translateY(0);
     }
     25%, 75% {
-      transform: translateX(-10px);
+      transform: translateY(-10px);
     }
     50% {
-      transform: translateX(10px);
+      transform: translateY(10px);
     }
   }
   .shaking {
-    animation: shake 10s infinite;
-  }
+    animation: shake 1s infinite;
+  } 
