finished the images and cutomizations :)

--- a/style.css
+++ b/style.css
@@ -12,3 +12,13 @@
   .shaking {
     animation: shake 1s infinite;
   } 
+
+  body{
+    background-image: url(bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  footer{
+    background-color: transparent;
+  }
